src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Administration_Notes__c</fullName>
        <defaultValue>&quot;User Notes&quot;</defaultValue>
        <description>This free-form field is used to add administration comments pertaining to the user.  A few examples are: married name/name changes, role/profile changes, and any other need to know facts.</description>
        <inlineHelpText>Use this free-form field to add administration comments pertaining to the user.</inlineHelpText>
        <label>Administration Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Group_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Can this user be assigned records in the Assignment Group process.  Uncheck to mark this use as inactive on all assignment groups</inlineHelpText>
        <label>Assignment Group Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>FTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Week__c</fullName>
        <formula>Today()+7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <picklist>
            <picklistValues>
                <fullName>Bellevue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellevue - remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Munich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance &amp; Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Virtual Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / Virtual Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC / SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Reports_To__c</fullName>
        <label>User Reports To?</label>
        <relationshipName>User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Office_Location__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <namedFilters>
        <fullName>Case_00NM0000000H8YaMAK</fullName>
        <active>true</active>
        <field>Case.Lodging_Operations_Agent__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Lodging Operations</value>
        </filterItems>
        <infoMessage>You must select a user assigned to an HPS profile</infoMessage>
        <isOptional>false</isOptional>
        <name>Case_Lodging Operations Agent</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00NM0000000HIJEMA4</fullName>
        <active>true</active>
        <field>Case.Accounting_Assigned_To__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Financial Operations</value>
        </filterItems>
        <infoMessage>You must assign the Accounting to a user in Financial Operations.</infoMessage>
        <isOptional>false</isOptional>
        <name>Case_Accounting Assigned To</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IC0000000awAmMAI_00NC0000004yJncMAE</fullName>
        <active>true</active>
        <field>Out_of_Office_Notice__c.User__c</field>
        <filterItems>
            <field>User.Assignment_Group_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Out of Office Notice_User</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IM00000000FFZMA2_00NM0000000HYu3MAG</fullName>
        <active>true</active>
        <field>Guest__c.Lodging_Operations_Agent_Lookup__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Lodging Operations - HPS,Lodging Operations - PAC</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Guest_Lodging Operations Agent</name>
    </namedFilters>
</CustomObject>